tone down shadow, revert spacing, fix card heights when loading

--- a/index.css
+++ b/index.css
@@ -124,7 +124,6 @@ header .button:not(:first-child) {
 .grid {
   display: flex;
   /* margin-top: 50px; */
-  justify-content: center;
   flex-wrap: wrap;
 }
 .grid a {
@@ -139,6 +138,7 @@ header .button:not(:first-child) {
   border: 1px solid #EEE;
   border-radius: 7px;
   overflow: hidden;
+  max-height: 480px;
 }
 .grid > .object > img {
   /* margin-bottom: 10px; */
@@ -232,7 +232,7 @@ canvas {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .card:hover {
-  box-shadow: 0 5px 27px rgba(0,0,0,0.25), 0 3px 5px rgba(0,0,0,0.22)
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1), 0 3px 10px rgba(0,0,0,0.2);
 }
 .cardTitle {
   font-size: 18px;
